plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

ext.minecraftMajor = project.minecraft_version.tokenize('.').take(2).join('.')
version = "${project.mod_version}+${project.minecraft_version}"
group = project.maven_group

base {
	archivesName = "WhispersOfEther-fabric-${minecraftMajor}"
}

loom {
	splitEnvironmentSourceSets()
	accessWidenerPath = file("src/main/resources/whispers_of_ether.accesswidener")

	mods {
		"whispers_of_ether" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs {
		configureEach {
			vmArg "-XX:+UseZGC"
			vmArg "-Xmx4G"
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

processResources {
	def properties = [
		version: project.version,
		minecraft_version: project.minecraft_version,
		loader_version: project.loader_version
	]
	inputs.properties properties

	filesMatching("fabric.mod.json") {
		expand properties
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 25
}

tasks.withType(AbstractArchiveTask).configureEach {
	archiveVersion = project.mod_version
}

java {
	withSourcesJar()
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = "whispers_of_ether-fabric-${minecraftMajor}"
			from components.java
		}
	}
}
